# schedule-agent

./: .env  README.md  pyproject.toml
app/: main.py
app/backend/: client.py
app/backend/mcp_services/: calendar_mcp.py
app/backend/tools/: db_op.py
app/common/: db_config.py  llm_config.py  security.py
app/models/request/: userInputWithSession.py
app/models/response/: agentResponse.py
app/routers/: chat_router.py
